Point frontend to eixa-api service

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2585,10 +2585,10 @@
 
             // --- CONFIGURATION AND GLOBAL STATE ---
             const config = {
-                CLOUD_FUNCTION_URL: "https://eixa-760851989407.us-east1.run.app/interact",
-                CLOUD_FUNCTION_ACTION_URL: "https://eixa-760851989407.us-east1.run.app/actions",
-                CLOUD_FUNCTION_AUTH_URL: "https://eixa-760851989407.us-east1.run.app/auth/google",
-                CLOUD_FUNCTION_OAUTH_CALLBACK_URL: "https://eixa-760851989407.us-east1.run.app/oauth2callback",
+                CLOUD_FUNCTION_URL: "https://eixa-api-760851989407.us-east1.run.app/interact",
+                CLOUD_FUNCTION_ACTION_URL: "https://eixa-api-760851989407.us-east1.run.app/actions",
+                CLOUD_FUNCTION_AUTH_URL: "https://eixa-api-760851989407.us-east1.run.app/auth/google",
+                CLOUD_FUNCTION_OAUTH_CALLBACK_URL: "https://eixa-api-760851989407.us-east1.run.app/oauth2callback",
                 firebaseConfig: {
                     apiKey: "AIzaSyAKEdwGJFjAXyY3vQUMm0sCIvdSfs-WInw",
                     authDomain: "arquitetodadivulgacao.firebaseapp.com",
