fix: Corrige múltiplos problemas de renderização e rotinas
Backend:
- Corrige erro 'item_details' não definido ao confirmar criação de rotina
- Adiciona suporte para view_request='projects' além de 'projetos'

Frontend:
- Adiciona renderização de Kanban em loadViewData
- Corrige carregamento de projetos

Resolve: projetos não aparecendo, kanban não renderizando, erro ao confirmar rotinas

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2313,6 +2313,7 @@
                 if (viewName === 'dashboard') renderDashboard(data.html_view_data.dashboard);
                 if (viewName === 'agenda') renderAgenda(data.html_view_data.agenda);
                 if (viewName === 'projects') renderProjects(data.html_view_data.projetos);
+                if (viewName === 'kanban') renderKanban(data.html_view_data.kanban);
                 if (viewName === 'memories') renderMemories(data.html_view_data.emotional_memories);
                 if (viewName === 'diagnostico') renderDiagnosis(data.html_view_data.diagnostico);
                 if (viewName === 'profile') renderProfile(data.html_view_data.long_term_memory);
